--- a/JupyterDataProcessing/save_data.ipynb
+++ b/JupyterDataProcessing/save_data.ipynb
@@ -1266,6 +1266,40 @@
    "id": "ddad407d-6527-4def-a68f-657650f2d77d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
+    "\n",
+    "# # Create a list of column names\n",
+    "# columns = ['Name', 'Age', 'City', 'Salary', 'Is_Employed']\n",
+    "\n",
+    "# # Generate random data with null values\n",
+    "# data = [\n",
+    "#     ['John', 30, 'New York', np.nan, True],\n",
+    "#     ['Jane', 25, 'Los Angeles', 50000, False],\n",
+    "#     [np.nan, 40, 'Chicago', 60000, True],\n",
+    "#     ['Mike', 35, np.nan, 70000, False],\n",
+    "#     ['Emily', np.nan, 'Houston', 80000, True],\n",
+    "#     ['David', 45, 'Phoenix', np.nan, False],\n",
+    "#     ['Sarah', 30, 'Dallas', 55000, True],\n",
+    "#     ['Chris', 25, 'Seattle', 65000, False],\n",
+    "#     [np.nan, 40, 'Denver', 75000, True],\n",
+    "#     ['Olivia', 35, 'San Francisco', np.nan, False]\n",
+    "# ]\n",
+    "\n",
+    "# # Create a DataFrame\n",
+    "# df = pd.DataFrame(data, columns=columns)\n",
+    "\n",
+    "# # Save the DataFrame to a CSV file\n",
+    "# df.to_csv('sample_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a5a94a5-e76a-490f-bb48-4ee458496440",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
